crud without final score

--- a/OwlTIME/app/src/main/res/values/strings.xml
+++ b/OwlTIME/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="btnCreate">CREAR</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nameSubject">Nombre</string>
 
 </resources>
